[package]
name = "zoha4"
version = "0.1.0"
edition = "2021"
authors = ["Koosha Hosseiny <i@koosha.io>"]
description = "A drop down terminal inspired by Tilda, GTK4 flavor"
homepage = "https://zoha.rs"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/hkoosha/zoha4"

[features]
# default = ["hack", "x11", "wayland"]
default = ["hack"]
"hack" = ["dep:device_query"]
#"wayland" = []
#"x11" = []

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"

eyre = "0.6"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

gtk4 = "0.8.1"
gdk4 = "0.8.1"
gdk4-x11 = "0.8.1"
gdk4-wayland = "0.8.1"
glib = "0.19.4"
pango = { version = "0.19.3", features = ["v1_52"] }

vte4 = { package = "vte4",  version = "0.7.1" }

dbus = "0.9"
dbus-crossroads = "0.5"
device_query = { version = "2.0", optional = true }

